   languages.  See the application notes for SayCountedNoun and SayCountedAdj for
   more information.
 * Voicemail now runs the externnotify script when pollmailboxes is activated and
   notices a change.
 * Voicemail now includes rdnis within msgXXXX.txt file.
 * Added 'D' command to ExternalIVR full details in doc/externalivr.txt

Dialplan Functions
------------------
 * SRVQUERY and SRVRESULT functions added. This can be used to query and iterate
   over SRV records associated with a specific service. From the CLI, type
   'core show function SRVQUERY' and 'core show function SRVRESULT' for more
   details on how these may be used.
 * PITCH_SHIFT dialplan function added. This function can be used to modify the
   pitch of a channel's tx and rx audio streams.
 * Added new dialplan functions CONNECTEDLINE and REDIRECTING which permits
   setting various connected line and redirecting party information.
 * CALLERID and CONNECTEDLINE dialplan functions have been extended to
   support ISDN subaddressing.
 * The CHANNEL() function now supports the "name" and "checkhangup" options.
 * For DAHDI channels, the CHANNEL() dialplan function now allows
   the dialplan to request changes in the configuration of the active
   echo canceller on the channel (if any), for the current call only.
   The syntax is:

   exten => s,n,Set(CHANNEL(echocan_mode)=off)

   The possible values are:

     on - normal mode (the echo canceller is actually reinitialized)
     off - disabled
     fax - FAX/data mode (NLP disabled if possible, otherwise completely
           disabled)
     voice - voice mode (returns from FAX mode, reverting the changes that
             were made when FAX mode was requested)
 * Added new dialplan function MASTER_CHANNEL(), which permits retrieving
   and setting variables on the channel which created the current channel.
   Administrators should take care to avoid naming conflicts, when multiple